--- a/styles/styles.css
+++ b/styles/styles.css
@@ -702,6 +702,12 @@ body:has(dialog[open]) {
   -moz-column-gap: 20px;
        column-gap: 20px;
 }
+@media (max-width: 767px) {
+  .header__actions {
+    -moz-column-gap: 5px;
+         column-gap: 5px;
+  }
+}
 @media (max-width: 1280px) {
   .header__button {
     height: 48px;
